[package]
name = "im-bridging-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
proc_qq = { version = "0.1", features = ["console_qr"] }
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dptree = "0.3"
async-trait = "0.1"
chbs = "0.1"
parking_lot = "0.12"
internment = "0.7"
dashmap = "5.4"
regex = "1.7"
once_cell = "1.16"
mongodb = "2.3"
serde = "1.0"
itertools = "0.10"
clap = { version = "4.0", features = ["derive"] }
shellwords = "1.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde_json = "1.0"
figment = { version = "0.10", features = ["env"] }